# travel-surprise-crewai

./: README.md  pyproject.toml
output/: destination_recommendations.md  travel_profile_analysis.md
src/travel_surprise_crew/: crew.py  inputs.py  main.py
src/travel_surprise_crew/config/: agents.yaml  tasks.yaml
