[project]
name = "travel_surprise_crew"
version = "0.1.0"
description = "travel-surprise-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
travel_surprise_crew = "src.travel_surprise_crew.main:run_default"
run_crew = "src.travel_surprise_crew.main:run_default"
train = "src.travel_surprise_crew.main:train_default"
replay = "src.travel_surprise_crew.main:replay_default"
test = "src.travel_surprise_crew.main:test_default"
list_inputs = "src.travel_surprise_crew.main:list_inputs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
